# quar-animator

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  ANIMATION_REMEDY.md  CLAUDE.md  Quar-Animator-PRD.md  README.md  SVG_IN.md  SprintsY.md  package.json  pnpm-lock.yaml  sprint-plan.md  tsconfig.json
agents/: README.md  animation-system.md  core-engine.md  documentation.md  export-pipeline.md  frontend-designer.md  project-lead.md  qa-tester.md  rigging-engine.md  state-machine.md
book/: 00-introduction.md  01-project-architecture.md  02-design-system-editor-shell.md  03-the-scene-graph.md  04-coordinate-systems-and-camera.md  05-state-management-for-editors.md  06-webgl2-from-scratch.md  07-shape-rendering-pipeline.md  08-the-infinite-grid.md  09-texture-and-image-rendering.md  10-visual-effects-and-compositing.md  11-the-tool-system.md  12-shape-tools.md  13-the-pen-tool.md  14-brush-and-eraser-tools.md  15-selection-and-transform.md  16-direct-selection-and-path-editing.md  17-group-selection.md  18-undo-redo.md  19-the-properties-panel.md  20-the-layer-panel.md  21-the-toolbar.md  22-the-menu-bar.md  23-the-text-tool-and-font-pipeline.md  26-svg-import-and-export.md  (+36 more)
tools/quar-mcp/: .env.example  README.md  pyproject.toml
tools/quar-mcp/app/: common.py  config.py  main.py  project.py  quar_format.py
tools/quar-mcp/app/prompts/: animation.py
tools/quar-mcp/app/resources/: schema.py
tools/quar-mcp/app/tools/: animation_tools.py  node_tools.py  page_tools.py  project_tools.py
tools/quar-mcp/tests/: conftest.py  test_quar_format.py  test_tools.py
(+169 files in other folders)
